# Vision

./: Cargo.toml  Procfile  README.md  Rocket.toml  RustConfig
migrations/2022-08-10-162908_create_user/: up.sql
migrations/2022-08-10-172107_create_vacation/: down.sql  up.sql
migrations/2022-08-10-204837_craete_transitions/: down.sql  up.sql
migrations/2022-08-19-212233_add_oraganization/: down.sql  up.sql
migrations/2022-09-11-211730_organization_access_code/: down.sql  up.sql
migrations/2022-09-11-212140_organization_access_code_not_null/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/api/: initial.rs  mod.rs
src/api/mutations/: mod.rs  transition.rs  user.rs  vacation.rs
src/api/queries/: mod.rs  organization.rs  user.rs  vacation.rs
src/api/return_objects/: user.rs
src/api/utils/: token.rs
src/logic/: calculator.rs  date.rs
src/repos/: mod.rs  organization.rs  transition.rs  user.rs  vacation.rs
src/resolvers/: mod.rs  organization.rs  transition.rs  user.rs  vacation.rs
src/services/: authentication.rs  authorization.rs  calculator.rs  config.rs  date.rs  mod.rs  organization.rs  transition.rs  user.rs  vacation.rs
src/tests/logic/: date.rs  mod.rs
src/types/: computedVacation.rs  computed_vacation.rs  config.rs  info.rs  mod.rs  organization.rs  stats.rs  token.rs  transition.rs  user.rs  vacation.rs
src/utils/: countries.rs  errors.rs  establish_connection.rs  free_days.rs  mod.rs  parse.rs
